Image ref updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <td>
-      <img src="images/blank-face.jpg" alt="This me" />
+      <img src="images/blank-face2.jpg" alt="This me" />
     </td>
     <td>
       <h1>This is my Site!</h1>
