--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       </li>
     </ul>
     <hr>
-    <form class="" action="mailto:ignacio_im@hotmail.com" method="post" enctype="text/plain">
+    <form class="" action="mailto:email@email.com" method="post" enctype="text/plain">
       <label>Name:</label>
       <input type="text" name="yourName" value="">
       <br>
